# tantivy-czech-stemmer

./: Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml
algorithms/: dolamic.sbl
src/: lib.rs  tokenizer.rs
src/snowball/: mod.rs
src/snowball/algorithms/: dolamic_aggressive.rs  dolamic_light.rs  mod.rs
