[package]
name = "tantivy-czech-stemmer"
version = "0.2.1"
edition = "2021"
keywords = ["tantivy", "tokenizer", "stemmer", "czech"]
categories = ["text-processing"]
license = "BSD-3-Clause"
license-file = "LICENSE"
authors = ["Testuj.to s.r.o. <technology@testuj.to>", "Patrik Šimunič"]
description = "Czech stemmer as Tantivy tokenizer"
repository = "https://github.com/testuj-to/tantivy-czech-stemmer"

[dependencies]
serde = "1.0.199"
serde_derive = "1.0.199"
tantivy-tokenizer-api = "0.3.0"

[dev-dependencies]
tantivy = "0.22.0"
